--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "datatables.net": "^1.11.5",
         "datatables.net-bs5": "^1.11.5",
         "datatables.net-select": "^1.3.4",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "jquery-ui": "^1.13.2"
     },
     "browserslist": [
         "> 1%",
