--- a/docker/example.env
+++ b/docker/example.env
@@ -1,8 +1,8 @@
-## This variable sets the image to use for the codedefenders container.
-## Take a look at the docker/README.md for other (supported) images/registries.
-# CODEDEFENDERS_IMAGE=quay.io/codedefenders/codedefenders
-## This variable sets the version of the codedefenders image (tag)
-CODEDEFENDERS_VERSION=
+## This two variables set the image and tag to use for the local aidefenders container.
+## Note that the image must be built locally.
+## See the README.md file for more information on running codedefenders with the aidefenders integration.
+CODEDEFENDERS_IMAGE=localhost/aidefenders
+CODEDEFENDERS_VERSION=aid
 ## The port on the local machine where codedefenders will be accessible
 # CODEDEFENDERS_PORT=8080
 
@@ -15,4 +15,7 @@ CODEDEFENDERS_VERSION=
 ## This is the username that gets assigned the admin role for the /admin resources
 # CODEDEFENDERS_ADMIN_USERNAME=admin
 
-## You can add other environment variables for configuration. More information can be found in the `docker/README.md` file.
+## This variable sets the OpenAI API key to be used by aidefenders.
+CODEDEFENDERS_OPENAI_API_KEY=
+## This variable sets the GPT model to be used by aidefenders.
+CODEDEFENDERS_OPENAI_CHATGPT_MODEL=gpt-3.5-turbo
