--- a/docker/example.env
+++ b/docker/example.env
@@ -1,13 +1,13 @@
-## This two variables set the image and tag to use for the local aidefenders container.
+## These two variables set the image and tag for the local AI Defenders container.
 ## Note that the image must be built locally.
-## See the README.md file for more information on running codedefenders with the aidefenders integration.
+## See the README.md file for more information about running Code Defenders with the AI Defenders integration.
 CODEDEFENDERS_IMAGE=localhost/aidefenders
 CODEDEFENDERS_VERSION=aid
-## The port on the local machine where codedefenders will be accessible
+## The port on the local machine where Code Defenders will be accessible
 # CODEDEFENDERS_PORT=8080
 
 ## The default values of these variables are set inline in the docker-compose
-## WARNING: If you change them after the first container creation you have to update the database container manually.
+## WARNING: If you change them after the first container creation, you have to update the database container manually.
 # CODEDEFENDERS_DB_NAME=defender
 # CODEDEFENDERS_DB_USERNAME=defender
 # CODEDEFENDERS_DB_PASSWORD=defender
@@ -15,7 +15,7 @@ CODEDEFENDERS_VERSION=aid
 ## This is the username that gets assigned the admin role for the /admin resources
 # CODEDEFENDERS_ADMIN_USERNAME=admin
 
-## This variable sets the OpenAI API key to be used by aidefenders.
+## This variable sets the OpenAI API key to be used by AI Defenders.
 CODEDEFENDERS_OPENAI_API_KEY=
-## This variable sets the GPT model to be used by aidefenders.
+## This variable sets the GPT model to be used by AI Defenders.
 CODEDEFENDERS_OPENAI_CHATGPT_MODEL=gpt-3.5-turbo
